WEB-269 Fix uneven boxes for containers with ports on only right side, lots of code clean up, and cross-browser support.

--- a/src/app/mmsApp/directives/symbols/styles/componentSymbol.scss
+++ b/src/app/mmsApp/directives/symbols/styles/componentSymbol.scss
@@ -78,12 +78,6 @@
         }
     }
 
-    .symbol-icon-placeholder {
-        width: 100%;
-        height: 100%;
-        -webkit-transform-origin: center center;
-    }
-
     &.drag-entered {
         .silhouette {
             fill: rgba(33, 150, 243, .25);
